--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pomodoro Timer</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
+        <button id="reset" class="reset-icon"><i class="fas fa-redo"></i></button>
         <h1>Pomodoro Timer</h1>
         <div class="timer">
             <div class="time-display">25:00</div>
             <div class="controls">
                 <button id="start">Start</button>
                 <button id="pause">Pause</button>
-                <button id="reset">Reset</button>
             </div>
             <div class="modes">
                 <button class="mode-btn active" data-time="25">Pomodoro</button>
