added +5min button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="controls">
                 <button id="start">Start</button>
                 <button id="pause">Pause</button>
+                <button id="add-time">+5 min</button>
             </div>
             <div class="modes">
                 <button class="mode-btn active" data-time="25">Pomodoro</button>
